--- a/templates/page.j2
+++ b/templates/page.j2
@@ -47,7 +47,7 @@
             </div>
         </div>
     </section>
-
+    <script async src="//finicounter.eu.org/finicounter.js"></script>
     <script src="https://fastly.jsdelivr.net/gh/horrordor/bing-wallpaper/static/js/debugger.js"></script>
     <script src="https://fastly.jsdelivr.net/gh/horrordor/bing-wallpaper/static/js/loader.js"></script>
 </body>
